--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 
-
+spring.application.name=config-server-tutor-parent
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
