--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,1 +1,11 @@
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/microservices
+spring.datasource.username=root
+spring.datasource.password=root
 
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+eureka.client.service-url.default-zone= http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
