--- a/application-dev.properties
+++ b/application-dev.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/microservices
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.port=9090
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
